# Hexapodcpp

./: .clang-format  .gitignore  CMakeLists.txt  Hexapodcpp.ino  Makefile  README.md  package-lock.json  package.json  uncrustify.cfg
src/: CMakeLists.txt  Hexapodcpp.atsln  Hexapodcpp.componentinfo.xml  Hexapodcpp.cpp  Hexapodcpp.cppproj
src/App/: App.cpp  App.h
src/Bot/: Constants.h
src/Bot/Body/: Body.cpp  Body.h  BodyInterface.h
src/Bot/Leg/: Leg.cpp  Leg.h
src/Bot/Legs/: Legs.cpp  Legs.h
src/Bot/Walk/: Walk.cpp  Walk.h
src/Builder/: App.cpp  App.h
src/Cluster/: Cluster.h  ClusterBase.h  ClusterInterface.h  Constants.h
src/Cluster/Battery/: ClusterBattery.h
src/Cluster/Body/: ClusterBody.h
src/Cluster/Clusters/: Clusters.cpp  Clusters.h  ClustersInterface.h
src/Cluster/Decoding/: Protocol.cpp  Protocol.h
src/Cluster/Frame/: Frame.cpp  Frame.h
src/Cluster/General/: ClusterGeneral.h
src/Cluster/Imu/: ClusterImu.h
src/Cluster/Proximity/: ClusterProximity.h
src/Cluster/Servo/: ClusterServo.h
src/Component/: ComponentInterface.h  ComponentObservable.h  ComponentObservableInterface.h  ComponentObserverInterface.h
src/Component/Barometer/: Barometer.cpp  Barometer.h  BarometerInterface.h
src/Component/Battery/: Battery.cpp  Battery.h  BatteryInterface.h  BatteryObservable.h  BatteryObservableInterface.h  BatteryObserverInterface.h  BatteryState.h
src/Component/Communication/: Communication.cpp  Communication.h  CommunicationInterface.h
src/Component/Display/: Ssd1306.cpp  Ssd1306.h  Ssd1306Interface.h
src/Component/Imu/: Ahrs.cpp  Ahrs.h  Mpu9150.cpp  Mpu9150.h  Mpu9150Interface.h
src/Component/Led/: Led.cpp  Led.h  LedInterface.h
src/Component/Proximity/: SensorProximity.cpp  SensorProximity.h  SensorProximityInterface.h  SensorProximityObservable.h  SensorProximityObservableInterface.h  SensorProximityObserverInterface.h  SensorProximityWindow.h  SensorsId.h
src/Component/Servo/: Servo.cpp  Servo.h  ServoInterface.h
src/Component/Servos/: Constants.h  Servos.cpp  Servos.h  ServosInterface.h
src/Component/ServosController/: Pca9685.cpp  Pca9685.h  Pca9685Interface.h
src/Component/Software/: Software.cpp  Software.h  SoftwareInterface.h
src/Core/: CoreInterface.h  Status.h
src/Core/Event/: Event.cpp  Event.h  EventId.h  EventInterface.h  EventMediatorInterface.h
src/Driver/: DriverInterface.h  Isr.h
src/Driver/Adc/: Adc.cpp  Adc.h  AdcInterface.h  AdcX64.cpp  AdcX64.h
src/Driver/Gpio/: Gpio.cpp  Gpio.h  GpioInterface.h  GpioX64.cpp  GpioX64.h
src/Driver/InputCapture/: InputCapture.cpp  InputCapture.h  InputCaptureInterface.h  InputCaptureX64.cpp  InputCaptureX64.h
src/Driver/Tick/: Tick.cpp  Tick.h  TickInterface.h  TickX64.cpp  TickX64.h
src/Driver/Twi/: Constants.h  Twi.cpp  Twi.h  TwiInterface.h  TwiX64.cpp  TwiX64.h
src/Driver/Uart/: Constants.h  Uart.cpp  Uart.h  UartInterface.h  UartX64.cpp  UartX64.h
src/Misc/Bitmap/: Bitmaps.cpp  Bitmaps.h  Font.h  Pixel.h
src/Misc/Buffer/: Buffer.cpp  Buffer.h
src/Misc/Geometry/: Geometry.h
src/Misc/Logger/: Logger.cpp  Logger.h
src/Misc/Maths/: Geometry.h  Maths.h  Utils.h
src/Service/: Constants.h  Service.h  ServiceCommon.h  ServiceInterface.h
src/Service/Battery/: ServiceBattery.cpp  ServiceBattery.h
src/Service/Body/: ServiceBody.cpp  ServiceBody.h
src/Service/Communication/: ServiceCommunication.cpp  ServiceCommunication.h
src/Service/Control/: ServiceControl.cpp  ServiceControl.h
src/Service/Display/: ServiceDisplay.cpp  ServiceDisplay.h
src/Service/Event/: BufferEvent.cpp  BufferEvent.h  EventDispatcherInterface.h  EventListener.cpp  EventListener.h  EventListenerInterface.h  SEvent.h
src/Service/General/: ServiceGeneral.cpp  ServiceGeneral.h
src/Service/Orientation/: ServiceOrientation.cpp  ServiceOrientation.h
src/Service/Proximity/: ServiceProximity.cpp  ServiceProximity.h
src/Service/Services/: Services.cpp  Services.h
src/app/: App.cpp  App.h  Builder.cpp  Builder.h
src/bot/: Body.cpp  Body.h  BodyInterface.h  Constants.h  Leg.cpp  Leg.h  Legs.cpp  Legs.h
src/bot/Body/: Body.cpp  Body.h
src/bot/Leg/: Leg.cpp
src/clu/: Cluster.h  ClusterBattery.h  ClusterBatteryInterface.h  ClusterBody.h  ClusterGeneral.h  ClusterImu.h  ClusterInterface.h  ClusterProximity.h  ClusterServo.h  Clusters.cpp  Clusters.h  ClustersInterface.h  Constants.h  Frame.cpp  Frame.h  Protocol.cpp  Protocol.h
src/cmp/: Battery.cpp  Battery.h  BatteryInterface.h  Communication.cpp  Communication.h  CommunicationInterface.h  ComponentInterface.h  ComponentObservable.h  ComponentObservableInterface.h  ComponentObserver.h  ComponentObserverInterface.h  Led.cpp  Led.h  LedInterface.h  Mpu9150.cpp  Mpu9150.h  Mpu9150Interface.h  Pca9685.cpp  Pca9685.h  Pca9685Interface.h  ProximityInterface.h  SensorProximity.cpp  SensorProximity.h  SensorProximityInterface.h  Servo.cpp  Servo.h  ServoInterface.h  Servos.cpp  Servos.h  ServosInterface.h  Software.cpp  Software.h  SoftwareInterface.h  Srf05.cpp  Srf05.h  Ssd1306.cpp  Ssd1306.h  Ssd1306Interface.h  Vl53l0x.cpp  Vl53l0x.h
src/cor/: Bitmaps.cpp  Bitmaps.h  CoreInterface.h  Font.h  Isr.h  Log.cpp  Log.h  Pixel.h  Status.h
src/drv/: Adc.cpp  Adc.h  AdcInterface.h  Buffer.cpp  Buffer.h  Communication.cpp  Communication.h  Driver.h  DriverInterface.h  Gpio.cpp  Gpio.h  GpioInterface.h  InputCapture.cpp  InputCapture.h  InputCaptureInterface.h  Isr.h  Tick.cpp  Tick.h  TickInterface.h  Twi.cpp  Twi.h  TwiInterface.h  Uart.cpp  Uart.h  UartInterface.h
src/snr/: SensorInterface.h  SensorProximity.cpp  SensorProximity.h  SensorProximityInterface.h
src/srv/: Constants.h  Service.h  ServiceBattery.cpp  ServiceBattery.h  ServiceCommon.h  ServiceControl.cpp  ServiceControl.h  ServiceDisplay.cpp  ServiceDisplay.h  ServiceGeneral.cpp  ServiceGeneral.h  ServiceInterface.h  ServiceOrientation.cpp  ServiceOrientation.h  ServiceProximity.cpp  ServiceProximity.h  Services.cpp  Services.h
unittests/: CMakeLists.txt
unittests/mock/: adc.h  gpio.h
unittests/mock/bot/: MockBody.h
unittests/src/: CMakeLists.txt
(+155 files in other folders)
